--- a/Algorithmic_Trading_Strategy_Using_MACD.ipynb
+++ b/Algorithmic_Trading_Strategy_Using_MACD.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Algorithmic_Trading_Strategy_Using_MACD.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBGpqHed5gp8jsqvHl1xsM",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vishal13230/quantitative_finance/blob/main/Algorithmic_Trading_Strategy_Using_MACD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,23 +12,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "N_taQMvXvvXt"
+        "id": "N_taQMvXvvXt",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Moving Average Convergence Divergence (MACD) \n",
         "# MACD is a trend-following momentum indicator that shows the relationship between two moving averages of a security’s price.\n",
         "# The MACD is calculated by subtracting the 26-period Exponential Moving Average (EMA) from the 12-period EMA.\n",
         "# MACD triggers technical signals when it crosses above (to buy) or below (to sell) its signal line."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "nekXZdD7xqnT"
+        "id": "nekXZdD7xqnT",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Import the libraries\n",
         "import numpy as np\n",
@@ -52,43 +45,43 @@
         "import matplotlib.pyplot as plt\n",
         "plt.style.use(\"ggplot\")\n",
         "from pandas_datareader import data as web"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "P2lXmCCSyoan"
+        "id": "P2lXmCCSyoan",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Get the stock/portfolio starting and ending date\n",
         "stock_start_date = \"2019-06-01\"\n",
         "stock_end_date = datetime.today()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "rM5Yhcecy7SZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
         },
-        "outputId": "f3ee4b83-faee-4c6e-d1fd-eee0f56987f7"
+        "id": "rM5Yhcecy7SZ",
+        "outputId": "f3ee4b83-faee-4c6e-d1fd-eee0f56987f7",
+        "vscode": {
+          "languageId": "python"
+        }
       },
-      "source": [
-        "# Get the stock data\n",
-        "df = web.DataReader(\"HDFCAMC.NS\", data_source = \"yahoo\", start = stock_start_date, end = stock_end_date)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "RemoteDataError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRemoteDataError\u001b[0m                           Traceback (most recent call last)",
@@ -101,25 +94,38 @@
             "\u001b[0;31mRemoteDataError\u001b[0m: Unable to read URL: https://finance.yahoo.com/quote/HDFCAMC.NS/history?period1=1559361600&period2=1626580799&interval=1d&frequency=1d&filter=history\nResponse Text:\nb'<!DOCTYPE html>\\n  <html lang=\"en-us\"><head>\\n  <meta http-equiv=\"content-type\" content=\"text/html; charset=UTF-8\">\\n      <meta charset=\"utf-8\">\\n      <title>Yahoo</title>\\n      <meta name=\"viewport\" content=\"width=device-width,initial-scale=1,minimal-ui\">\\n      <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge,chrome=1\">\\n      <style>\\n  html {\\n      height: 100%;\\n  }\\n  body {\\n      background: #fafafc url(https://s.yimg.com/nn/img/sad-panda-201402200631.png) 50% 50%;\\n      background-size: cover;\\n      height: 100%;\\n      text-align: center;\\n      font: 300 18px \"helvetica neue\", helvetica, verdana, tahoma, arial, sans-serif;\\n  }\\n  table {\\n      height: 100%;\\n      width: 100%;\\n      table-layout: fixed;\\n      border-collapse: collapse;\\n      border-spacing: 0;\\n      border: none;\\n  }\\n  h1 {\\n      font-size: 42px;\\n      font-weight: 400;\\n      color: #400090;\\n  }\\n  p {\\n      color: #1A1A1A;\\n  }\\n  #message-1 {\\n      font-weight: bold;\\n      margin: 0;\\n  }\\n  #message-2 {\\n      display: inline-block;\\n      *display: inline;\\n      zoom: 1;\\n      max-width: 17em;\\n      _width: 17em;\\n  }\\n      </style>\\n  <script>\\n    document.write(\\'<img src=\"//geo.yahoo.com/b?s=1197757129&t=\\'+new Date().getTime()+\\'&src=aws&err_url=\\'+encodeURIComponent(document.URL)+\\'&err=%<pssc>&test=\\'+encodeURIComponent(\\'%<{Bucket}cqh[:200]>\\')+\\'\" width=\"0px\" height=\"0px\"/>\\');var beacon = new Image();beacon.src=\"//bcn.fp.yahoo.com/p?s=1197757129&t=\"+ne..."
           ]
         }
+      ],
+      "source": [
+        "# Get the stock data\n",
+        "df = web.DataReader(\"HDFCAMC.NS\", data_source = \"yahoo\", start = stock_start_date, end = stock_end_date)\n",
+        "# need to change "
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "zMCTOI4AzuVf"
+        "id": "zMCTOI4AzuVf",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Show the stock data\n",
         "df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "1GoQF579zvQd"
+        "id": "1GoQF579zvQd",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Visualize the stock price\n",
         "plt.figure(figsize = (14, 7))\n",
@@ -127,26 +133,32 @@
         "plt.xticks(rotation = 15)\n",
         "plt.xlabel(\"Date\")\n",
         "plt.ylabel(\"Adj Close Price\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "C2qOyFwQ2xbB"
+        "id": "C2qOyFwQ2xbB",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Steps to calculate the MACD and Signal line indicaters"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "zQE55nQX5VkY"
+        "id": "zQE55nQX5VkY",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Calculate the short term EMA\n",
         "Short_EMA = df[\"Adj Close\"].ewm(span = 12, adjust = False).mean()\n",
@@ -159,15 +171,18 @@
         "\n",
         "# Calculate the signal line\n",
         "Signal = MACD.ewm(span = 9, adjust = False).mean()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "xlIjTfjG7VdL"
+        "id": "xlIjTfjG7VdL",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Plot the chart\n",
         "plt.figure(figsize = (14, 7))\n",
@@ -175,40 +190,49 @@
         "plt.plot(df.index, MACD, label = \"Stock MACD\", color = \"red\")\n",
         "plt.plot(df.index, Signal, label = \"Signal Line\", color = \"blue\")\n",
         "plt.legend(loc = \"upper left\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ACeD6jbf9N7O"
+        "id": "ACeD6jbf9N7O",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Create new columns for the data\n",
         "df[\"MACD\"] = MACD\n",
         "df[\"Signal Line\"] = Signal"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "uU4rYyRV-si_"
+        "id": "uU4rYyRV-si_",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Show the new data frame\n",
         "df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "1O5ee7nF-xm1"
+        "id": "1O5ee7nF-xm1",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Create a function to signal when to buy and sell the stock\n",
         "def buy_sell(Signal):\n",
@@ -240,41 +264,50 @@
         "            Sell.append(np.nan)\n",
         "\n",
         "    return(Buy, Sell)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "KcTvCjXACMA-"
+        "id": "KcTvCjXACMA-",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Create a buy and sell columns\n",
         "a = buy_sell(df)\n",
         "df[\"Buy_Signal_Price\"] = a[0]\n",
         "df[\"Sell_Signal_Price\"] = a[1]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "7ENIx2bWC_v4"
+        "id": "7ENIx2bWC_v4",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Show the data frame\n",
         "df"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "DPd7GEjNDHj3"
+        "id": "DPd7GEjNDHj3",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Visually show the stock buy and sell signal\n",
         "plt.figure(figsize = (14, 7))\n",
@@ -286,20 +319,34 @@
         "plt.xlabel(\"Date\")\n",
         "plt.ylabel(\"Adj Close Price\")\n",
         "plt.legend(loc = \"upper left\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "DDB0SVsiGoYv"
-      },
-      "source": [
-        ""
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "DDB0SVsiGoYv",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOBGpqHed5gp8jsqvHl1xsM",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Algorithmic_Trading_Strategy_Using_MACD.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
